# loop-engineering-opentine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/loopforge/: __init__.py  cli.py  engine.py  mcp_server.py  models.py  policy.py  recorder.py
src/loopforge/strategies/: __init__.py  numeric_refinement.py  text_rewrite.py
tests/: test_advanced.py  test_engine.py
