[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "opentine-loop-engineering"
version = "0.2.1"
description = "Loop engineering toolkit with opentine-native branch/fork/replay provenance"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Loop Engineering Community" }
]
keywords = ["opentine", "agent loops", "provenance", "ai engineering", "fork", "replay", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "opentine>=0.2.0",
  "typer>=0.12",
  "mcp>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[project.scripts]
loopforge = "loopforge.cli:app"
loopforge-mcp = "loopforge.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loopforge"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
